      files that list filenames, which is not supported.  Based on a patch
      from Raphael Geissert.  (Closes: #480939)
    + [RA] If dh is used, require debhelper tokens in maintainer scripts.
    + [ADB] Warn about packages declaring a debhelper compatibility level
      of 7 or above and using dh_clean -k, which has been deprecated in
      favour of dh_prep.
  * checks/fields:
    + [RA] dh-make-php provides a CDBS rule fragment and hence should go
      into Build-Depends, not Build-Depends-Indep.  Thanks, Mathieu
      Parent.  (Closes: #509286)
  * checks/files{,.desc}:
    + [RA] Packages whose executables are all in /usr/games should
      probably be in section games.  (Closes: #509147)
  * checks/menu-format{,.desc}:
    + [RA] If a *.desktop file contains a MimeType key, check that the
      postinst calls update-desktop-database.  (Closes: #488832)
    + [RA] Stop keeping a separate hash of all files in the package and
      use Lintian::Collect information.  The hash was being reused across
      packages, possibly leading to excessive memory consumption and false
      negatives for archive-wide runs.
  * checks/menus:
    + [RA] Keep the hash of files and symlinks local to each package,
      reducing memory consumption and false negatives for archive-wide
      runs.
  * checks/patch-systems.desc:
    + [RA] Improve the patch-system-but-direct-changes-in-diff long
      description.  (Closes: #496516)
  * checks/rules{,.desc}:
    + [RA] Remove desktop-file-but-no-dh_desktop-call.  The only action of
      dh_desktop is now checked by desktop-mimetype-without-update-call;
      dh_desktop is unnecessary with other *.desktop files.
  * checks/scripts{,.desc}:
    + [RA] Overhaul checking of maintainer script and config interpreters:
      - postrm scripts must use an essential interpreter.
      - Only preinst scripts require Pre-Depends; Depends is sufficient for
        postinst and prerm scripts.  (Closes: #508307)