@@ -1,0 +1,4 @@
+Testname: debhelper-dh-depends
+Version: 1.0
+Description: Test required dependencies for dh* scripts
+Test-For: debhelper-script-needs-versioned-build-depends
