@@ -1,0 +1,33 @@
+#!/usr/bin/make -f
+
+build: build-stamp
+build-stamp:
+	dh_testdir
+	dh_auto_configure
+	dh_auto_build
+	touch $@
+
+clean:
+	dh_testdir
+	dh_testroot
+	dh_auto_clean
+	dh_clean
+
+install: install-stamp
+install-stamp: build-stamp
+	dh_testdir
+	dh_testroot
+	dh_prep
+	dh_auto_install
+	touch $@
+
+binary: binary-arch binary-indep
+binary-arch:
+binary-indep: install-stamp
+	dh binary-indep --until dh_prep
+	dh_icons
+	dh_installifupdown
+	dh_lintian
+	dh binary-indep --remaining
+
+.PHONY: binary binary-arch binary-indep build clean install
