@@ -1,0 +1,9 @@
+W: debhelper-dh-depends source: debhelper-script-needs-versioned-build-depends dh (>= 7)
+W: debhelper-dh-depends source: debhelper-script-needs-versioned-build-depends dh_auto_build (>= 7)
+W: debhelper-dh-depends source: debhelper-script-needs-versioned-build-depends dh_auto_clean (>= 7)
+W: debhelper-dh-depends source: debhelper-script-needs-versioned-build-depends dh_auto_configure (>= 7)
+W: debhelper-dh-depends source: debhelper-script-needs-versioned-build-depends dh_auto_install (>= 7)
+W: debhelper-dh-depends source: debhelper-script-needs-versioned-build-depends dh_icons (>= 5.0.51~)
+W: debhelper-dh-depends source: debhelper-script-needs-versioned-build-depends dh_installifupdown (>= 5.0.44~)
+W: debhelper-dh-depends source: debhelper-script-needs-versioned-build-depends dh_lintian (>= 6.0.7~)
+W: debhelper-dh-depends source: debhelper-script-needs-versioned-build-depends dh_prep (>= 7)
